# one-todo-web

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
database/: init.sql
entity/: Cargo.toml
entity/src/: extract_history.rs  lib.rs  oauth2_state_storage.rs  orders.rs  prelude.rs  todos.rs  user_subscriptions.rs  users.rs
lemon_squeezy/: Cargo.toml
lemon_squeezy/src/: constants.rs  lib.rs
src/: api.rs  main.rs  middlewares.rs  services.rs
src/api/: constants.rs  jwt_auth.rs  mod.rs  model.rs  oauth.rs  order.rs  todo.rs  user.rs  webhook.rs
src/middlewares/: jwt_auth.rs  lemon_squeezy_webhook_auth.rs
src/services/: extract_history.rs  mod.rs  openai.rs  subscription.rs
