[package]
name = "one-todo-web"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
hyper = { version = "0.14.27", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.31.0", features = ["full"] }
tower = "0.4.13"
entity = { path = "./entity" }
lemon_squeezy = { path = "./lemon_squeezy" }
serde = "1.0.183"
serde_json = "1.0.105"
anyhow = "1.0.74"
oauth2 = "4.4.1"
axum-macros = "0.3.8"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
reqwest = { version = "0.11.18", features = ["json"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
url = "2.4.0"
tower-http = { version = "0.4.3", features = ["cors"] }
regex = "1.9.3"
sentry = { version = "0.32.0", features = ["anyhow"] }
ring = { version = "0.17.3", features = ["std"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.release]
# Enables line numbers in Sentry
debug = 1